--- a/bind_tpl/index.html
+++ b/bind_tpl/index.html
@@ -1,14 +1,9 @@
 <html>
 	<head>
 		<script>
-			var DD = new Date();
-			
-			//class MyClass{} 會出錯
-			function MyClass(){}
-
 			var Module ={
 				onRuntimeInitialized: function(){
-					 Module.getDateTime();
+					//code here
 				}
 			}
 		</script>
